--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="search_hint">SearchView</string>
+    <string name="add">Add</string>
 
 </resources>
